Added games movies fixed discord fixed

--- a/discord.html
+++ b/discord.html
@@ -1,158 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
 <link rel="icon" type="image/x-icon" href="favicon.png">
     <title>THJ | Discord</title>
 
   <style>
-    /* global */
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-
-.grid-2{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-}
-
-body{
+  body {
     margin: 0;
-    padding: 0;
-    font-family: 'Roboto', sans-serif;
-    background-color: #101214;
-    color: #7A7C80;
-
-}
-
-h2,.white{
-    color: #fff;
-}
-
-h3,.white{
-  color: #fff;
-}
-
-a{
-    color: #7A7C80;
-    text-decoration: none;
-}
-
-#invite {
-  font-size: 1rem;
-}
-
-/* section 1 */
-.section-1{
-    padding-top: 40vh;
-    text-align: center;
-}
-
-.section-1 p{
-    font-size: 1.1rem;
-    padding-bottom: 10px;
-    margin:0;
-}
-
-.section-1 h2{
-    font-size: 1.7rem;
-    margin-bottom: 10px;
-}
-
-.section-1 a{
-    font-size: 1rem;
-    padding: 10px;
-}
-/* section 2 */
-.section-2{
-    padding-top: 10vh;
-    width: 70%;
-}
-
-.section-2 h2{
-    font-size: 1.7rem;
-    margin-bottom: 10px;
-}
-
-.section-2 p{
-    font-size: 1.1rem;
-    padding-bottom: 10px;
-    margin:0;
-}
-
-.section-2 a{
-    display: block;
-    padding: 5px;
-    font-size: 1.2rem;
-    padding-left: 0;
-    width: 100px;
-}
-/* animations / utilities */
-.section-2 a:hover{
-    font-size: 1.3rem;
-    color: #fff;
-    cursor: pointer;
-    transition: 0.2s;
-}
-
-.section-1 a:hover{
-    color: #fff;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-.white:hover{
-    position: relative;
-    padding-left: 10px;
-}
-
-/* media queres */
-@media(max-width:780px){
-    .grid-2{
-        grid-template-columns: 1fr;
-    }
-    .section-1{
-        padding:0;
-        padding-top: 5rem;
-    }
-    .section-2{
-        padding: 0;
-        padding-left: 1.5rem;
-        padding-top: 2rem;
-    }
-}
-  </style>
-</head>
-<body>
-    <div class="grid-2">
-        <div class="section-1">
-            <i class="fas fa-code fa-5x white"></i>
-            <h2>THJ DISCORD</h2>
-          <a href="index.html">⬅ Back To Home</a>
-        </div>
-        <div class="section-2">
-            <h2>THJ Discord</h2>
-          <p>The THJ Discord is a community server for proxies, kajigs, and all things unblocker related.</p>
-<br>
-          <p>Looking for methods? We can help you!</p>
-          <p>Need help setting up your own proxy? We have you covered!</p>
-          <br>
-
-          <p>With an amazing staff and an outstanding community, we provide a amazing space for everyone!</p>
-
-          <br>
-          <p><u><a href="https://discord.com/invite/XhZtjG83Zu" id="invite">https://discord.gg/thj</a></u><br></br>...Or click on the discord icon in the bottom right corner to get started.</p>
-
-          <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
-  new Crate({
-    server: '1035669821880270908',
-    channel: '1069248579895578624',
-  })
-</script> 
-
-          
-        </div>
-    </div>
-</body>
-</html>
+    background-color: #36393F;
+  }
+</style>
+<widgetbot
+    server="1035669821880270908"
+    channel="1061462011793395792"
+    width="100%"
+    height="100%"
+></widgetbot>
+<script src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>
